# Nightmare-loader

./: .gitignore  Dockerfile.iso-builder  Makefile  README.md  build_image.sh  build_iso.sh  build_windows.bat  nightmare-loader.spec  pyproject.toml  run_iso.sh  setup_android.sh
.github/workflows/: build-iso.yml  build-windows.yml  build.yml  ci.yml  nightmare-loader.yml
grub/: grub.cfg.template
iso_root/etc/: fstab  hosts
iso_root/etc/X11/xorg.conf.d/: 00-nightmare-live.conf
iso_root/etc/network/: interfaces
iso_root/etc/systemd/network/: 01-live-dhcp.network
iso_root/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso_root/etc/systemd/system/serial-getty@ttyS0.service.d/: autologin.conf
iso_root/etc/systemd/system/systemd-networkd-wait-online.service.d/: timeout.conf
iso_root/root/: .bash_profile  .xinitrc
iso_root/root/.config/openbox/: menu.xml  rc.xml
iso_root/root/.config/tint2/: tint2rc
nightmare_loader/: __init__.py  __main__.py  boot_files.py  cli.py  distros.py  drive.py  grub.py  iso.py  launcher.py  server.py
nightmare_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nightmare_loader/assets/: nightmare-loader.desktop
nightmare_loader/theme/: theme.txt
nightmare_loader/ui/: index.html
tests/: test_cli.py  test_distros.py  test_drive.py  test_grub.py  test_iso.py  test_launcher.py  test_server.py
