[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightmare-loader"
version = "1.1.0"
description = "Multi-ISO bootable USB creator supporting UEFI and legacy BIOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
nightmare-loader     = "nightmare_loader.cli:main"
nightmare-loader-gui = "nightmare_loader.cli:gui_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
windows = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nightmare_loader*"]

[tool.setuptools.package-data]
nightmare_loader = ["ui/*.html", "theme/*.txt", "assets/*.desktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
